--- a/css/index.css
+++ b/css/index.css
@@ -75,25 +75,25 @@ body {
 }
 
 .td-triangle {
-    width: 15px;
+    width: 18px;
     vertical-align: top;
 }
 
 .bubble-left {
     float: left;
     background-color: #FFF;
-    color: #333;
+    color: #000;
 }
 
 .bubble-right {
     float: right;
     background-color: #AAD2FF;
-    color: #333;
+    color: #000;
 }
 
 .bubble-left, .bubble-right {
     border-radius: 10px;
-    padding: 15px;
+    padding: 12px;
     line-height: 20px;
     min-width: 8px;
     min-height: 20px;
@@ -105,7 +105,7 @@ body {
     height: 0;
     width: 0;
     border-top: 0;
-    margin-left: 5px;
+    margin-left: 8px;
     border-color: transparent #FFF transparent transparent;
     border-bottom: 10px solid transparent;
     border-right: 10px solid #FFF;
@@ -115,7 +115,7 @@ body {
     height: 0;
     width: 0;
     border-top: 0;
-    margin-right: 5px;
+    margin-right: 8px;
     border-color: transparent transparent transparent #AAD2FF;
     border-bottom: 10px solid transparent;
     border-left: 10px solid #AAD2FF;
@@ -126,13 +126,18 @@ body {
 }
 
 .left-triangle, .right-triangle {
-    margin-top: 9px;
+    margin-top: 10px;
 }
 
 .music-info {
     width: 190px;
     display: inline-block;
     cursor: pointer;
+    padding-left: 5px;
+}
+
+.table-cell {
+    display: table-cell;
 }
 
 .music-color {
@@ -141,7 +146,7 @@ body {
 
 .music-progress {
     margin-bottom: 2px;
-    width: 190px;
+    width: 185px;
     height: 5px;
 }
 
@@ -159,7 +164,7 @@ body {
 }
 
 .music-name {
-    width: 100px;
+    width: 95px;
     overflow: hidden;
 }
 
