--- a/css/index.css
+++ b/css/index.css
@@ -195,11 +195,11 @@ ul, ol {
 /********************表情**********************/
 
 .emotion {
-    width: 100%;
-    height: 164px;
-    position: absolute;
+    position: fixed;
     top: 100%;
+    height: 164px;
     left: 0;
+    right: 0;
     background: white;
 }
 
@@ -274,7 +274,7 @@ ul, ol {
 }
 
 .chat-box {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -283,11 +283,9 @@ ul, ol {
 }
 
 .chat-personal, .chat-room-box {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    /*width: 100%;
-    height: 100%;*/
     right: 0;
     bottom: 0;
     background: #C2D2E3;
@@ -655,7 +653,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 /*导航窗口*/
 .main-box {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
