--- a/html_v2/src/css/main.css
+++ b/html_v2/src/css/main.css
@@ -7,6 +7,14 @@
     justify-content: space-between;
 }
 
+.horizontal-right {
+    justify-content: flex-end;
+}
+
+.vertical-center {
+    align-items: center;
+}
+
 .pointer {
     cursor: pointer;
 }
@@ -15,15 +23,24 @@
     user-select: none;
 }
 
+.input-medium {
+    height: 32px;
+    line-height: 32px;
+}
+
+.button-medium {
+    padding: 8px;
+}
+
+.search-bar {
+    padding: 0 14px;
+}
+
 .slot-group {
     border-left: 1px solid #ddd;
     height: 100%;
     box-sizing: border-box;
     padding: 10px;
-}
-
-.slot-search {
-    margin: 5px 0;
 }
 
 .slot-group-notice {
@@ -38,23 +55,17 @@
 
 .slot-group-panel {
     width: 200px;
+    height: 396px;
+    overflow-y: scroll;
 }
 
-.slot-group-member {
-    height: 50px;
-    width: 50px;
-    margin: 10px 0;
-}
-
-.slot-group-avatar {
-    height: 32px;
-    width: 32px;
-
+.slot-group-panel .lemon-contact {
+    height: 102px;
 }
 
 .slot-group-avatar img {
-    width: 100%;
-    height: 100%;
+    height: 64px;
+    width: 64px;
     border-radius: 4px;
 }
 
@@ -64,25 +75,11 @@
     white-space: nowrap;
     font-size: 12px;
     line-height: 18px;
-}
-
-.slot-group-menu span {
-    display: inline-block;
-    cursor: pointer;
-    color: #888;
-    margin: 4px 10px 0 0;
-    border-bottom: 2px solid transparent;
-}
-.slot-group-menu span:hover {
-    color: #000;
-    border-color: #333;
-}
-.slot-contact-fixedtop {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+    width: 64px;
 }
 
 .slot-search {
+    margin: 5px 0;
     width: 100%;
     box-sizing: border-box;
     font-size: 14px;
@@ -97,4 +94,45 @@
 .lemon-message-text .lemon-message__content img {
     width: 47px !important;
     height: 47px !important;
+}
+
+.modal-title {
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+.modal-content {
+    padding: 15px;
+}
+
+.modal-header {
+    padding-bottom: 15px;
+}
+
+.modal-body .group-select select {
+    width: 230px;
+    height: 292px;
+    font-size: 16px;
+}
+
+.modal-body .group-select select option {
+    padding: 5px;
+}
+
+.modal-body .group-select-middle button {
+    margin: 5px;
+    height: 28px;
+}
+
+.modal-footer {
+    padding-top: 20px;
+}
+
+.modal-footer button {
+    margin: 5px;
+    height: 28px;
+}
+
+.group-name {
+    width: 530px;
 }
