登录界面微调，bug fixes

--- a/html/src/css/login.css
+++ b/html/src/css/login.css
@@ -1,58 +1,21 @@
 .box {
-    background: #fff;
     overflow: hidden;
     width: 100%;
     height: 100%;
     border-radius: 2px;
     box-shadow: 0 0 40px #000;
     color: #8b8c8d;
-    font-size: 0
-}
-
-.box, .box .box-part {
-    box-sizing: border-box
+    font-size: 0;
+    border: 0;
 }
 
 .box .box-part {
-    display: inline-block;
     position: relative;
     vertical-align: top;
     height: 100%;
-    width: 50%
 }
 
-.box .box-part#bp-right {
-    background: url("../assets/panorama.jpg") no-repeat 0 0;
-    border-left: 1px solid #eee
-}
-
-.box .box-messages {
-    font-size: 20px;
-    line-height: 250px;
-    color: red;
-    text-align: center
-}
-
-.box .box-error-message {
-    position: relative;
-    overflow: hidden;
-    box-sizing: border-box;
-    height: 0;
-    line-height: 32px;
-    padding: 0 12px;
-    text-align: center;
-    width: 100%;
-    font-size: 11px;
-    color: #fff;
-    background: #f38181
-}
-
-.box .partition {
-    width: 100%;
-    height: 100%
-}
-
-.box .partition .partition-title {
+.box .partition-title {
     box-sizing: border-box;
     padding: 30px;
     width: 100%;
@@ -62,7 +25,7 @@
     font-weight: 300
 }
 
-.box .partition .partition-form {
+.box .partition-form {
     padding: 0 20px;
     box-sizing: border-box
 }
@@ -111,30 +74,17 @@
     background: #fff
 }
 
-.box .large-btn span {
-    font-weight: 600
-}
-
 .box .large-btn:hover {
     color: #fff !important
 }
 
-.box .github-btn {
+.box .gold-btn {
     margin-top: 30px;
     border-color: #dba226;
     color: #dba226
 }
 
-.box .github-btn:hover {
+.box .gold-btn:hover {
     border-color: #dba226;
     background: #dba226
-}
-
-.pop-out-enter-active, .pop-out-leave-active {
-    transition: all .5s
-}
-
-.pop-out-enter, .pop-out-leave-active {
-    opacity: 0;
-    transform: translateY(24px)
 }
